--- a/HouseholdBudgeter/Views/Shared/_Layout.cshtml
+++ b/HouseholdBudgeter/Views/Shared/_Layout.cshtml
@@ -61,9 +61,10 @@
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="#">
+                                <a href=@Url.Action("Create", "Households")>
+                                    <i class="fa fa-user fa-fw"></i>
                                     <div>
-                                        <strong></strong>
+                                        <strong>New Household</strong>
                                         <span class="pull-right text-muted">
                                             <em></em>
                                         </span>
