--- a/HouseholdBudgeter/Views/BudgetItems/Create.cshtml
+++ b/HouseholdBudgeter/Views/BudgetItems/Create.cshtml
@@ -4,22 +4,20 @@
     ViewBag.Title = "Create";
 }
 
-
-<!-- Page Content -->
-<div id="page-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header"></h1>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+
+    @Html.HiddenFor(model => model.BudgetCategoryId)
+    @Html.HiddenFor(model => model.BudgetId)
+    @Html.HiddenFor(model => model.Name)
+  
 
     <div class="form-horizontal">
         <h4>BudgetItem</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.BudgetCategoryId, "BudgetCategoryId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("BudgetCategoryId", null, htmlAttributes: new { @class = "form-control" })
@@ -33,7 +31,7 @@
                 @Html.DropDownList("BudgetId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.BudgetId, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Frequency, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -43,13 +41,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -68,6 +66,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.BudgetCategory, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BudgetCategory, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BudgetCategory, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -75,17 +81,6 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
-</div>
 
 
 
