--- a/HouseholdBudgeter/Views/BudgetItems/Delete.cshtml
+++ b/HouseholdBudgeter/Views/BudgetItems/Delete.cshtml
@@ -4,13 +4,6 @@
     ViewBag.Title = "Delete";
 }
 
-
-<!-- Page Content -->
-<div id="page-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header"></h1>
                 <h3>Are you sure you want to delete this?</h3>
                 <div>
                     <h4>BudgetItem</h4>
@@ -76,13 +69,48 @@
                         </div>
                     }
                 </div>
+<h3>Delete Budget Item</h3>
 
-            </div>
-            <!-- /.col-lg-12 -->
+<p>Are you sure you want to delete this?</p>
+<div>
+    <dl class="dl-horizontal">
+
+        <dt>
+            Budget Category
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BudgetCategory.Name)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Amount)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Amount)
+        </dd>
+
+        <dt>
+            Annual Frequency
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Frequency)
+        </dd>
+
+    </dl>
+
+    @using (Html.BeginForm("DeleteBudgetItem", "Budget"))
+    {
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(m => m.Id)
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" />
+
         </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
+    }
 </div>
 
 
