--- a/HouseholdBudgeter/Views/BudgetItems/Edit.cshtml
+++ b/HouseholdBudgeter/Views/BudgetItems/Edit.cshtml
@@ -5,12 +5,6 @@
 }
 
 
-<!-- Page Content -->
-<div id="page-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header"></h1>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -81,13 +75,51 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
+<h3>Edit Budget Item</h3>
+
+@using (Html.BeginForm("EditBudgetItem", "Budget"))
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.BudgetId)
+        @Html.HiddenFor(model => model.BudgetCategory.Id)
+        @Html.HiddenFor(model => model.Created)
+        @Html.HiddenFor(model => model.Budget)
+
+
+        <div class="form-group">
+            <label class="control-label col-md-5" for="CategoryName">Category</label>
+            <div class="col-md-7">
+                <input type="text" id="CategoryName" name="CategoryName" value="@Model.BudgetCategory.Name" class="form-control" />
             </div>
-            <!-- /.col-lg-12 -->
         </div>
-        <!-- /.row -->
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-md-5" })
+            <div class="col-md-7">
+                @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Frequency, htmlAttributes: new { @class = "control-label col-md-5" })
+            <div class="col-md-7">
+                @Html.EditorFor(model => model.Frequency, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Frequency, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
     </div>
-    <!-- /.container-fluid -->
-</div>
+}
 
 
 
