--- a/HouseholdBudgeter/Views/BudgetItems/Index.cshtml
+++ b/HouseholdBudgeter/Views/BudgetItems/Index.cshtml
@@ -5,13 +5,56 @@
 }
 
 
-<!-- Page Content -->
-<div id="page-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header"></h1>
-
+@*<div class="row">
+    <div class="col-md-6">
+        <h2>Budget</h2>
+        <h3>Total Monthly Budget: $
+        @foreach(var item in Model)
+        {
+            @item.Amount
+        }
+        </h3>
+        <hr />
+        <h3>Budgeted Expenses</h3>
+        <a href="#" class="addBudgetItem" id="model.BudgetItem.Id"><i class="glyphicon glyphicon-plus"></i> Add Budget Item</a>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Amount</th>
+                    <th>Annual Frequency</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.BudgetCategory.Name</td>
+                        <td>$@item.Amount</td>
+                        <td>@item.Frequency</td>
+                        <td>
+                            <a href="#" class="editBudgetItem" id="@item.BudgetId"><i class="glyphicon glyphicon-pencil"></i></a>
+                            <a href="#" class="deleteBudgetItem" id="@item.BudgetId"><i class="glyphicon glyphicon-remove"></i></a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>*@
+    @*<div class="col-md-offset-1 col-md-5 content" id="action">
+        @if (TempData["EditError"] != null)
+        {
+            <p class="text-danger">@TempData["EditError"]</p>
+            @Html.Action("_EditBudgetItem", "Budget", new { id = TempData["Id"] })
+        }
+        else
+        {
+            @*<p class="text-danger">@TempData["Error"]</p>
+            @Html.Action("_AddBudgetItem", "BudgetItmes", new { id = Model.Id })*@
+        @*}
+    </div>
+</div>*@
                 <p>
                     @Html.ActionLink("Add New Budget Items", "Create")
                 </p>
@@ -68,13 +111,16 @@
                     }
 
                 </table>
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
-</div>
+ 
 
 
 
+@section Scripts {
+    <script src="~/Scripts/LoadPartials.js"></script>
+    <script src="~/Scripts/jquery.maskMoney.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#Amount').maskMoney();
+        });
+    </script>
+}
