--- a/HouseholdBudgeter/Views/Budgets/Index.cshtml
+++ b/HouseholdBudgeter/Views/Budgets/Index.cshtml
@@ -5,12 +5,6 @@
 }
 
 
-<!-- Page Content -->
-<div id="page-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header"></h1>
 
                 <p>
                     @Html.ActionLink("Create New Budget", "Create")
@@ -30,7 +24,7 @@
                     {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Household.Name)
+                                @Html.DisplayFor(modelItem => item.Household)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Name)
@@ -44,13 +38,7 @@
                     }
 
                 </table>
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
-</div>
+
 
 
 
