--- a/HouseholdBudgeter/Views/Households/Create.cshtml
+++ b/HouseholdBudgeter/Views/Households/Create.cshtml
@@ -4,111 +4,104 @@
     ViewBag.Title = "Create";
 }
 
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-<!-- Page Content -->
-@Html.HiddenFor(model => model.Users)
-@Html.HiddenFor(model => model.BudgetId)
-<div id="page-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header"></h1>
-                @using (Html.BeginForm())
-                {
-                    @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.Users)
+    @Html.HiddenFor(model => model.BudgetId)
 
-                    <div class="form-horizontal">
-                        <h4>Create A Household</h4>
-                        <hr />
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        @*<div class="form-group">
-                        @Html.LabelFor(model => model.Users, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Users, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Users, "", new { @class = "text-danger" })
-                        </div>
-                    </div>*@
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.EmailAddress, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.EmailAddress, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.EmailAddress, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        @*<div class="form-group">
-                        @Html.LabelFor(model => model.BudgetId, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.BudgetId, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.BudgetId, "", new { @class = "text-danger" })
-                        </div>
-                    </div>*@
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Create" class="btn btn-default" />
-                            </div>
-                        </div>
-                    </div>
-                }
-                <div class="col-md-offset-1 col-md-5 content">
-                <h3>Join Household</h3>
-                <p>If you've received an e-mail to join a household, enter your invitation code here.</p>
-                <p class="text-danger">@ViewBag.Message</p>
-                @using (Html.BeginForm("JoinHousehold", "Household"))
-                {
-                    @Html.AntiForgeryToken()
-                    <div class="form-horizontal">
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <div class="form-group">
-                            <label for="inviteCode" class="control-label col-md-4">Invitation Code</label>
-                            <div class="col-md-6">
-                                <input type="text" name="inviteCode" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-10">
-                                <input type="submit" value="Join Household" class="btn btn-default" />
-                            </div>
-                        </div>
-                    </div>
-                }
-            </div>
-                <div>
-                    @Html.ActionLink("Back to List", "Index")
+    <div class="form-horizontal">
+        <h3>Create A Household</h3>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @*<div class="form-group">
+                @Html.LabelFor(model => model.Users, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Users, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Users, "", new { @class = "text-danger" })
                 </div>
+            </div>*@
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.EmailAddress, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.EmailAddress, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.EmailAddress, "", new { @class = "text-danger" })
             </div>
-            <!-- /.col-lg-12 -->
         </div>
-        <!-- /.row -->
+
+        @*<div class="form-group">
+                @Html.LabelFor(model => model.BudgetId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BudgetId, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.BudgetId, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
     </div>
+
+
+    <div class="col-md-12">
+        <p><b>Note:</b> If you start a new household you will be removed from any households you are currently in.</p>
+        <div class="col-md-12">
+            <h3>Join Household</h3>
+            <p>If you've received an e-mail to join a household, enter your invitation code here.</p>
+            <p class="text-danger">@ViewBag.Message</p>
+            @using (Html.BeginForm("JoinHousehold", "HouseholdInvitations"))
+            {
+                <div class="form-horizontal">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            @*<label for="inviteCode" class="control-label col-md-12">Invitation Code</label>*@
+                            <input type="text" name="inviteCode" class="form-control" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <input type="submit" value="Join Household" class="btn btn-default" />
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
     </div>
- 
+}
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+
 
 
 
