--- a/HouseholdBudgeter/Views/Households/Index.cshtml
+++ b/HouseholdBudgeter/Views/Households/Index.cshtml
@@ -2,139 +2,123 @@
 
 @{
     ViewBag.Title = "Index";
+    var MsgSent = ViewBag.Message;
 }
 
+@if (ViewBag.HouseholdName != null)
+{
+    <h2>@ViewBag.HouseholdName</h2>
+}
+else
+{
+    <h2>Household</h2>
+}
 
-<!-- Page Content -->
-<div id="page-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header"></h1>
+@if (!Model.Any())
+{
+    <p>You aren't a member of any households.</p>
+    <p>@Html.ActionLink("New Household", "Create", "Households")</p>
+}
+else
+{
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            @*<div class="table-responsive">
+                                <div class="row">
+                                    <div class="col-md-8">
+                                        <div class="col-md-12">*@
+                                            <h3>Members</h3>
+                                            <table class="table table-striped">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Name</th>
+                                                        <th>Email</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    @foreach (var user in Model.SelectMany(a => a.Users))
+                                                    {
+                                                        <tr>
+                                                            <td>@user.FullName</td>
+                                                            <td>@user.Email</td>
+                                                        </tr>
+                                                    }
 
-                @*<div>
-            <h3>Household:@foreach (var Name in Model.Where( x => x.EmailAddress == x.Name ))</h3>
-                    <h3 class=Household:>@Model.Users
-                    .Name)</h3>
-        </div>*@
-
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                 My Households
-                            </div>
-                            <!-- /.panel-heading -->
-                            <div class="panel-body">
-                                <div class="table-responsive">
-                                    <table class="table table-striped table-bordered table-hover">
-                                        <thead>
-                                        <tr>
-                                            <th>#</th>
-                                            <th>@Html.DisplayNameFor(model => model.FirstName)</th>
-                                            <th>@Html.DisplayNameFor(model => model.LastName)</th>
-                                            <th>@Html.DisplayNameFor(model => model.EmailAddress)</th>
-                                            <th>@Html.DisplayNameFor(model => model.Date)</th>
-                                            <th></th>
-                                        </tr>
-                                        </thead>
-                                       <tbody>
-                                        @foreach (var item in Model)
-                                        {
-                                            <tr>
-                                                <td></td>
-                                                <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.LastName)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.EmailAddress)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.Date)</td>
-                                                <td>
-                                                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                                                    @Html.ActionLink("Details", "Details", new {  id = item.Id})
-                                                    @Html.ActionLink("Delete", "Delete", new {  id = item.Id})
-                                                    @Html.ActionLink("Bank Accounts", "Index", "BankAccounts")
-                                                </td>
-                                            </tr>
-                                        }
-                                        </tbody>
-                                    </table>
-                                    <p>
-                                        @Html.ActionLink("Create New", "Create")    
-                                    </p>
-                                </div>
-                                <!-- /.table-responsive -->
-                            </div>
-                            <!-- /.panel-body -->
-                        </div>
-                        <!-- /.panel -->
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                Invite
-                            </div>
-                            <div class="panel-body">
-                                <form role="form">
-                                    <h4>Invite another user to join your household.</h4>
-                                    <fieldset>
-                                        <div class="form-group">
-                                            <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                                                </tbody>
+                                            </table>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="col-md-offset-2 col-md-10">
-                                                <input type="submit" value="Send Invitation" class="btn btn-default" />
-                                            </div>
-                                        </div>
-                                    </fieldset>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                Leave
-                            </div>
-                            <div class="panel-body">
-                                <form role="form">
-                                    <h4>Leave your current household and start a new one.</h4>
-                                    @*<fieldset>
-                        <div class="form-group">
-                            <div class="col-md-10">
-                                <label class="checkbox-inline">
-                                    <input type="checkbox">I understand that I will no longer have acces to my current household's accounts.
-                                    <input type="submit" value="Leave Household" class="btn btn-default" />
-                                </label>
-                            </div>
-                         </div>
-                    </fieldset>*@
-
-
-                            <div class="form-group">
-                                <div class="col-md-offset-2 col-md-10">
-                                    <h5>I understand that I will no longer have acces to my current household's accounts.</h5>
-                                    <div class="col-md-offset-2 col-md-10">
-                                        <input type="submit" value="LeaveHousehold" class="btn btn-default" />
+                                        <p>
+                                            @Html.ActionLink("Create New", "Create")
+                                        </p>
                                     </div>
+                                    <!-- /.table-responsive -->
                                 </div>
-                                </div>
+                                <!-- /.panel-body -->
+                            </div>
+                    <!-- /.panel -->
+                </div>
+           @*</div>
+        </div>
+     </div>
+ </div>*@        
+}
+<div class="col-md-12">
+    <h3>Invite</h3>
+    <p>Invite another user to join your household.</p>
+    @using (Html.BeginForm("InviteUser", "HouseholdInvitations"))
+            {
+        @Html.AntiForgeryToken()
 
-                            </form>
-                        </div>
-                        </div>
-                    </div>
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @*<p class="col-xs-12 text-success">@MsgSent</p>*@
+                <label for="inviteEmail" class="control-label col-md-2">Email</label>
+                <div class="col-md-10">
+                    <input type="text" name="inviteEmail" id="inviteEmail" class="form-control" />
                 </div>
             </div>
-            <!-- /.col-lg-12 -->
+            <div class="form-group">
+                <div class="col-md-10">
+                    <input type="submit" value="Send Invitation" class="btn btn-default" />
+                </div>
+            </div>
         </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
+    }
+</div>
+
+<div class="col-md-12">
+    <h3>Leave</h3>
+    <p class="col-xs-12 text-danger">@ViewBag.Error</p>
+    <p>Leave your current household and start another one.</p>
+    @using (Html.BeginForm("LeaveHousehold", "Households"))
+            {
+        @Html.AntiForgeryToken()
+
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <div class="form-group col-xs-12">
+                <input type="checkbox" name="confirmLeaveHousehold" value="true" class="col-xs-1" />
+                <p class="col-xs-10">I understand that I will no longer have access to my current household's accounts.</p>
+            </div>
+            <div class="form-group">
+                <div class="col-md-11">
+                    <input type="submit" value="Leave Household" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
 </div>
 
 
+
+
+
+
+
+      
