--- a/HouseholdBudgeter/Views/Shared/_CreateTrans.cshtml
+++ b/HouseholdBudgeter/Views/Shared/_CreateTrans.cshtml
@@ -33,29 +33,29 @@
                             </div>
                         </div>
 
-                        @*<div class="form-group">
-                                <div class="col-sm-2 col-sm-offset-4 text-center">
-                                    @Html.RadioButton("Types", false) <text class="text-danger"><b>Withdraw</b></text>
-                                </div>
-                                <div class="col-sm-2 text-center">
-                                    @Html.RadioButton("Types", true) <text class="text-success"><b>Deposit</b></text>
-                                </div>
-                                @Html.ValidationMessageFor(model => model.Types, "", new { @class = "text-danger" })
-                            </div>*@
-
                         <div class="form-group">
-                            @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-sm-12">
-                                <div class="btn-group" data-toggle="buttons">
-                                    <label class="btn btn-primary active">
-                                        @Html.RadioButton("Types", "Withdraw", true, new { id = "IsWithdrawal" }) Withdraw
-                                    </label>
-                                    <label class="btn btn-primary">
-                                        @Html.RadioButton("Types", "Deposit", new { id = "IsDeposit" }) Deposit
-                                    </label>
-                                </div>
+                            <div class="col-sm-2 offset-12 text-center">
+                                @Html.RadioButton("Types", false) <text class="text-danger"><b>Withdraw</b></text>
                             </div>
+                            <div class="col-sm-2 text-center">
+                                @Html.RadioButton("Types", true) <text class="text-success"><b>Deposit</b></text>
+                            </div>
+                            @Html.ValidationMessageFor(model => model.Types, "", new { @class = "text-danger" })
                         </div>
+
+                        @*<div class="form-group">
+                                @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-sm-12">
+                                    <div class="btn-group" data-toggle="buttons">
+                                        <label class="btn btn-primary active">
+                                            @Html.RadioButton("Types", "Withdraw", true, new { id = "IsWithdrawal" }) Withdraw
+                                        </label>
+                                        <label class="btn btn-primary">
+                                            @Html.RadioButton("Types", "Deposit", new { id = "IsDeposit" }) Deposit
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>*@
 
                         <div class="form-group">
                             @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-sm-2" })
@@ -81,10 +81,13 @@
                         </div>
                     </div>
                 }
+                </div>
             </div>
         </div>
     </div>
-</div>
+           
+
+
 
 
 
