--- a/HouseholdBudgeter/Views/HouseholdInvitations/Index.cshtml
+++ b/HouseholdBudgeter/Views/HouseholdInvitations/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h2><i class="fa fa-dollar"></i> Household Invitations <a data-toggle="modal" href="#create" class="btn btn-default pull-right">Add A Household Invitation</a></h2>
+                <h2><i class="fa fa-envelope-o"></i> Household Invitations <a data-toggle="modal" href="#create" class="btn btn-default pull-right">Add A Household Invitation</a></h2>
             </div>
             <div class="panel-body">
                 <table class="table table-bordered">
@@ -65,10 +65,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="container" style="padding: 20px">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                @*<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <div class="panel-title">
                     <h3>Create Invitation</h3>
-                </div>
+                </div>*@
             </div>
                 <div class="panel-body">
                     @Html.Action("_CreateInv", "HouseholdInvitations")
