--- a/HouseholdBudgeter/Views/Households/Delete.cshtml
+++ b/HouseholdBudgeter/Views/Households/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Delete";
 }
 
-<div class="panel panel-danger">
+<div class="panel panel-default">
     <div class="panel-heading"><h2>Delete Household</h2></div>
     <div class="panel-body">
         <h3>Are you sure you want to delete this?</h3>
