--- a/HouseholdBudgeter/Views/Account/Register.cshtml
+++ b/HouseholdBudgeter/Views/Account/Register.cshtml
@@ -24,12 +24,12 @@
                             @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
                         </div>
                     </div>
-                    <div class="form-group">
+                    @*<div class="form-group">
                         @Html.LabelFor(m => m.Phone, new { @class = "col-md-2 control-label" })
                         <div class="col-md-10">
                             @Html.TextBoxFor(m => m.Phone, new { @class = "form-control" })
                         </div>
-                    </div>
+                    </div>*@
                     <div class="form-group">
                         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
                         <div class="col-md-10">
