--- a/HouseholdBudgeter/Views/HouseholdInvitations/Delete.cshtml
+++ b/HouseholdBudgeter/Views/HouseholdInvitations/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div class="panel panel-danger">
+<div class="panel panel-default">
     <div class="panel-heading"><h2>Delete Invitation</h2></div>
     <div class="panel-body">
         <h3>Are you sure you want to leave?</h3>
