--- a/HouseholdBudgeter/Views/Households/Details.cshtml
+++ b/HouseholdBudgeter/Views/Households/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>More Household Information</h2>
+<h2><i class="fa fa-home"></i>More Household Information</h2>
 
 <div>
     <hr />
