--- a/HouseholdBudgeter/Views/Shared/_CreateBankAccount.cshtml
+++ b/HouseholdBudgeter/Views/Shared/_CreateBankAccount.cshtml
@@ -9,10 +9,10 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h2><i class="fa fa-dollar"></i> Create A Bank Account </h2>
+                <h2><i class="fa fa-dollar"></i> Add A Bank Account </h2>
             </div>
             <div class="panel-body">
-                @using (Html.BeginForm())
+                @using (Html.BeginForm("Create", "BankAccounts"))
                 {
                     @Html.AntiForgeryToken()
 
