--- a/HouseholdBudgeter/Views/Shared/_CreateInv.cshtml
+++ b/HouseholdBudgeter/Views/Shared/_CreateInv.cshtml
@@ -4,34 +4,46 @@
     ViewBag.Title = "Create";
 }
 
-        @using (Html.BeginForm("Create", "HouseholdInvitations"))
-        {
-            @Html.AntiForgeryToken()
-            <div class="form-horizontal">
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.HouseholdId, "HouseholdId", htmlAttributes: new { @class = "control-label col-sm-2" })
-                    <div class="col-sm-10">
-                        @Html.DropDownList("HouseholdId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.HouseholdId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h2><i class="fa fa-envelope-o"></i> Create An Invitation </h2>
+            </div>
+            <div class="panel-body">
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.ToEmail, htmlAttributes: new { @class = "control-label col-sm-2" })
-                    <div class="col-sm-10">
-                        @Html.EditorFor(model => model.ToEmail, new { htmlAttributes = new { @class = "form-control", @placeholder = "Example: JohnDoe@domain.com" } })
-                        @Html.ValidationMessageFor(model => model.ToEmail, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                @using (Html.BeginForm("Create", "HouseholdInvitations"))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="form-horizontal">
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.HouseholdId, "HouseholdId", htmlAttributes: new { @class = "control-label col-sm-2" })
+                            <div class="col-sm-10">
+                                @Html.DropDownList("HouseholdId", null, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.HouseholdId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <input type="submit" value="Create" class="btn btn-primary" />
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.ToEmail, htmlAttributes: new { @class = "control-label col-sm-2" })
+                            <div class="col-sm-10">
+                                @Html.EditorFor(model => model.ToEmail, new { htmlAttributes = new { @class = "form-control", @placeholder = "Example: JohnDoe@domain.com" } })
+                                @Html.ValidationMessageFor(model => model.ToEmail, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <input type="submit" value="Create" class="btn btn-primary" />
+                            </div>
+                        </div>
                     </div>
+                   }
                 </div>
             </div>
-        }
+        </div>
+    </div>
 
 
